--- a/src/Components/ContactForm/ContactForm.module.css
+++ b/src/Components/ContactForm/ContactForm.module.css
@@ -1,20 +1,29 @@
 .form {
   display: grid;
-  gap: 40px;
-  grid-template-rows: 40px 40px 50px;
   grid-template-columns: 500px;
   margin-top: 50px;
   justify-content: center;
 }
 
-.numberContainer,
-.nameContainer {
-  position: relative;
+.buttonForm {
+  background: linear-gradient(to right, rgb(0, 255, 0), #37b5e1);
+  font-size: 24px;
+  transition: box-shadow 500ms ease-in-out;
+  margin-top: 15px;
 }
 
-.buttonForm {
-  background-color: rgb(0, 255, 0);
-  font-size: 24px;
+.buttonForm:hover:not(:disabled) {
+  box-shadow: rgb(0, 255, 0) 1px 3px 20px;
+}
+
+.buttonForm:focus:not(:disabled) {
+  box-shadow: rgb(25, 170, 218) 1px 3px 20px;
+}
+
+.buttonForm:disabled {
+  opacity: 0.3;
+  color: white;
+  cursor: not-allowed;
 }
 
 .nameForm,
@@ -32,9 +41,6 @@
 .errorNameMsg,
 .errorNumberMsg {
   font-size: 16px;
-  position: absolute;
-  top: 5px;
-  right: 20px;
   animation: pulse 1s infinite;
 }
 
