--- a/src/Components/ContactList/ContactList.module.css
+++ b/src/Components/ContactList/ContactList.module.css
@@ -3,19 +3,27 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 400px));
   justify-content: center;
-  gap: 15px;
+  gap: 25px;
 }
 
 .contactsItem {
+  box-shadow: rgb(0, 255, 0) 1px 3px 20px;
   gap: 5px 20px;
   display: grid;
   grid-template-areas:
-    "name  button"
-    "number button";
+    "name  buttonDelete"
+    "number buttonChange";
   padding: 20px 30px;
   border: 1px rgb(181, 191, 185) solid;
   border-radius: 15px;
   align-items: center;
   justify-items: center;
   box-sizing: border-box;
+  position: relative;
+  transition: scale 500ms ease-in-out, box-shadow 500ms ease-in-out;
+}
+
+.contactsItem:hover {
+  scale: 1.05;
+  box-shadow: rgb(2, 147, 157) 4px 6px 14px;
 }
